# mappersession

./: README.md  RELEASING  build_wheels_manylinux.py  hatch_build.py  manylinux.sh  mappersession.py  mappingSessionSchema.json  pyproject.toml  requirements.txt  test.json
.github/workflows/: ci.yml
src/mappersession/: __init__.py  __main__.py  mappersession.py  mappingSessionSchema.json
tests/: legacy_2-0.json  legacy_2-1.json  legacy_2-2.json  legacy_2-3.json  test_all.py  test_legacy_loading.py  test_metadata.py  test_session.json
