[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mappersession"
version = "0.0.12"
authors = [
  { name="Brady Boettcher", email="bradyboettcher@gmail.com" },
  { name="Joseph Malloch", email="joseph.malloch@gmail.com" },
]
description = "Session management tools in python for the libmapper signal mapping framework"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'jsonschema',
    'libmapper'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/libmapper/mappersession"
"Bug Tracker" = "https://github.com/libmapper/mappersession/issues"
